# read_until_slice

./: Cargo.toml  LICENSE  README.md
examples/: http.rs
src/: async_buf_read_until_slice_ext.rs  lib.rs  read_until_slice.rs
tests/: io_read_until_slice.rs
