[package]
name = "read_until_slice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.36"
default-features = false
features = ["io-util"]

[dev-dependencies.tokio]
version = "1.36"
default-features = false
features = ["macros", "rt"]
[dev-dependencies.tokio-test]
version = "0.4"

[dependencies]
pin-project-lite = "0.2.13"
pin-project = "1.1.4"
